--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "yarn": "1.22.18"
   },
   "devDependencies": {
+    "@types/node": "^17.0.23",
     "aws-cdk-lib": "^2.17.0",
     "constructs": "^10.0.94",
     "ts-node": "^10.7.0",
