--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^17.0.23",
     "@types/uuid": "^8.3.4",
     "aws-cdk-lib": "^2.17.0",
+    "aws-sdk": "^2.1105.0",
     "constructs": "^10.0.94",
     "esbuild": "^0.14.28",
     "ts-node": "^10.7.0",
