--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "yarn": "1.22.18"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.93",
     "@types/node": "^17.0.23",
     "@types/uuid": "^8.3.4",
     "aws-cdk-lib": "^2.17.0",
