--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,8 @@
         "${relativeFile}"
       ],
       "env": {
-        "AWS_REGION": "ca-central-1"
+        "AWS_REGION": "ca-central-1",
+        "AWS_PROFILE": "cvial-diesmedia"
       }
     }
   ]
